opam-version: "2.0"
maintainer:   ["Reynir Björnsson <reynir@reynir.dk>" "dave.scott@eu.citrix.com"]
authors:      "dave.scott@eu.citrix.com"
license:      "ISC"
homepage:     "https://github.com/mirage/ocaml-mbr"
bug-reports:  "https://github.com/mirage/ocaml-mbr/issues"
dev-repo:     "git+https://github.com/mirage/ocaml-mbr.git"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.4.0"}
  "lwt"
  "cstruct" {>= "6.0.0"}
  "cstruct" {dev & >= "6.2.0"}
  "ppx_cstruct"
  "fmt" {with-test}
  "alcotest" {with-test}
]
conflicts: [
  "result" {< "1.5"}
]
synopsis: "A simple library for manipulating Master Boot Records"
